--- a/packages/ckeditor5-mention/theme/mentionui.css
+++ b/packages/ckeditor5-mention/theme/mentionui.css
@@ -25,3 +25,8 @@
 		flex-shrink: 0;
 	}
 }
+
+/* See: https://github.com/ckeditor/ckeditor5/issues/17964 */
+div.ck.ck-balloon-panel:has( .ck.ck-mentions ) {
+	z-index: 999;
+}
